# cosmos-cookbook

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config-base.yaml  .pre-commit-config.yaml  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  README.md  SETUP.md  external.yaml  gp_install.sh  internal.yaml  justfile  mkdocs-internal.yml  mkdocs.yml  pyproject.toml
.claude/: SKILLS.md
.github/: pull_request_template.md
deploy/: README.md
docs/: SUMMARY.md  contributing_doc.md  cookie_debug.html  faq.md  get_started.md  getting_started.md  glossary.md  index.html  index.md  llms.txt  overview.md  prd-ai-friendly.md
experimental/: README.md
experimental/joallen/cosmos-reason1/: hf_cosmos_sft.py  inference.py  pyproject.toml  temporal.py
experimental/joallen/cosmos-reason1/av/: README.md  caption.py  generate_qa.py  reason.py
experimental/joallen/cosmos-reason1/cosmos_curate/: download.py  extract_qa.py  generate_caption.py  generate_qa.py
experimental/joallen/cosmos-reason1/gradio/: gradio_app.py  reason1p1_gradio.py
experimental/joallen/cosmos-reason1/gradio/maxzhaoshuol/: streamlet_cosmos_app.py  vllm_inference_qwen.py.py
experimental/joallen/cosmos-reason1/nexar_collision_prediction/: README.md  download.py  sft.toml
experimental/joallen/cosmos-reason1/nuscenes/: README.md  sft.toml
experimental/joallen/cosmos-reason1/nuscenes/v0/: shard.json  split_0.json  split_1.json  vlm_prompt_0.yaml
experimental/joallen/cosmos-reason1/vlad_bench/: README.md  download.py  sft.toml
scripts/: apply-ai-friendly.py  check-ai-friendly.py  (+1 more)
(+510 files in other folders)
