[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "cookbook"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
docs = [
    "mkdocs-exclude-unused-files",
    "mkdocs-jupyter",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-redirects",
    "pymdown-extensions",
]
scripts = [
    "opencv-python",
    "numpy",
    "streamlit",
]

[tool.uv]
default-groups = ["dev", "docs", "scripts"]

[tool.uv.build-backend]
module-name = ["scripts"]
module-root = ""
