[project]
name = "joallen-cosmos-reason1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "cosmos-rl",
    "datasets",
    "pydantic",
    "qwen_vl_utils",
    "rich",
    "toml",
    "torch",
    "transformers",
    "vllm==0.9.1",   # https://nvidia.slack.com/archives/C098A6VGEL9/p1753834930161799
    "wandb",
    "webdataset",
]

[dependency-groups]
build = ["torch"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
override-dependencies = [
    "transformers>=4.53, <4.54.0", # https://github.com/vllm-project/vllm-ascend/issues/2046#issuecomment-3123639101
]

[tool.uv.sources]
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git" }
